# Husky_obstacle_detection

./: README.md
huskylidar/src/cluster_objects/cloud_processing/: CMakeLists.txt  package.xml
huskylidar/src/cluster_objects/cloud_processing/include/cloud_processing/: avoidance_path.h  config.h  filters.h  object_classification.h
huskylidar/src/cluster_objects/cloud_processing/launch/: cropbox_filter.launch  passthrough_filter.launch
huskylidar/src/cluster_objects/cloud_processing/src/: pub_msg_script.py
huskylidar/src/cluster_objects/cloud_processing/src/obstacle_detection/: avoidance_path.cpp  filters.cpp  object_classification.cpp  obstacledetection_node.cpp
huskylidar/src/cluster_objects/cloud_processing/src/python/: GenerateBezier.py  lmpc.py
huskylidar/src/cluster_objects/velodyne_height_map/: CMakeLists.txt
huskylidar/src/cluster_objects/velodyne_height_map/include/velodyne_height_map/: heightmap.h
huskylidar/src/cluster_objects/velodyne_height_map/src/: heightmap.cpp  heightmap_nodelet.cpp
huskylidar/src/husky_lidar_files/husky_src/husky_velodyne_gazebo/: CMakeLists.txt  package.xml
huskylidar/src/husky_lidar_files/velodyne_src/: README.md
huskylidar/src/husky_lidar_files/velodyne_src/velodyne_description/launch/: description.launch  husky_with_velodyne.launch  spawn_husky.launch
huskylidar/src/husky_lidar_files/velodyne_src/velodyne_description/rviz/: husky_velodyne.rviz
huskylidar/src/husky_lidar_files/velodyne_src/velodyne_description/urdf/: empty.urdf  husky_velodyne_lidar.urdf.xacro
(+6 files in other folders)
